# bvjniicx

./: .env.dist  .gitignore  README.md  pyproject.toml
scripts/: launch.sh
src/: main.py
src/scripts/: create_modelfile.py
src/services/: data.py  train.py
src/templates/: alpaca_template.txt  modelfile_template.txt
src/utils/: config.py  models.py
