[project]
name = "llm-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "huggingface-hub[cli]>=0.30.2",
    "pydantic-settings>=2.8.1",
    "unsloth>=2025.3.19",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.0",
    "pyright>=1.1.399",
    "ruff>=0.11.5",
]
